--- a/css/Entreosage.css
+++ b/css/Entreosage.css
@@ -397,6 +397,15 @@ header h1 {
     opacity: 0.7;
 }
 
+.close-history {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    color:red;
+}
+
 /* =================== DASHBOARD =================== */
 #dashboard {
     margin-left: 240px;
