--- a/css/Entreosage.css
+++ b/css/Entreosage.css
@@ -19,8 +19,11 @@ h1,
 h2 {
     color: #0d6efd;
     margin-bottom: 15px;
+    max-width: auto;
 }
-
+#down{
+    max-width: 50px;
+}
 button {
     background-color: #0d6efd;
     color: white;
@@ -493,7 +496,7 @@ header h1 {
         align-items: center;
         padding: 12px 20px;
         gap: 10px;
-        max-width: 50%;
+        max-width: 70%;
     }
 
     /* Formulaire ajusté */
