--- a/css/Entreosage.css
+++ b/css/Entreosage.css
@@ -162,8 +162,8 @@ header h1 {
 }
 
 .badge-success {
-    background-color: #bef5cb;
-    color: green;
+    background-color:gray;
+    color: gray;
 }
 
 .badge-danger {
@@ -175,6 +175,7 @@ header h1 {
     float: left;
     border: 1px dashed red;
     margin-bottom: 20px;
+   
 }
 
 #product-management {
@@ -192,7 +193,7 @@ header h1 {
 .stocking-panel {
     flex: 1;
     min-width: 250px;
-    background-color: #f5f5f5;
+    background-color: goldenrod;
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
